edited styles\n gaps between cards were bugged

--- a/style.css
+++ b/style.css
@@ -188,64 +188,58 @@ footer a:first-child{
 .container{
     background-color: var(--background);
     display: grid;
-    gap: 16px; /* Space between the cards */
+    gap: 1rem; /* Space between the cards */
     padding: 2.5rem 1.5rem; /* Space around the grid */
     grid-template-columns: repeat(auto-fill, minmax(300px, 400px));
-    grid-template-rows: repeat(auto-fill, 150px);
+    grid-template-rows: repeat(auto-fill, minmax(150px,200px));
     overflow:auto;
 }
 .card {
     background-color: var(--main-color-opa);
     color: var(--text-main);
-    border-radius: 12px;
-    padding: 1rem;
+    border-radius: 20px;
+    padding: 1rem 1.5rem;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.192);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 150px;
+    height: clamp(150px,175px,200px);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     backdrop-filter: blur(5px);
 }
 .title{
-    font-size: 24px;
+    font-size: 26px;
     font-weight: bold;
     line-height: 1;
+    text-align: center;
 }
 .author,
 .pages{
     font-size: 14px;
     font-weight: bold;
     color: var(--text-sec);
+    align-self: start;
+    width: 100%;
 }
-.pages{
-    grid-column: 3;
-    justify-self: end;
-}
-.author{
-    justify-self: start;
-}
-.card-flex{
+
+/* .card-flex{
     display: grid;
     grid-template-columns: auto;
     align-items: center;
     width: 100%;
     justify-content: space-around;
-}
+} */
 .card-buttons{
     display: grid;
-    grid-template-columns: 1fr auto 1fr;
+    grid-template-columns: 1fr 1fr;
     align-items: center;
-    gap: 2rem;
+    justify-items: center;
 }
 .card-buttons button{
     border: none;
     color: rgb(255, 255, 255);
     font-size: 12px;
     font-weight: bold;
-    grid-column: 4;
+    grid-column: 2;
     height: 28px;
     width:60px;
     border-radius: 18px;
